Fixed links to display different career paths in tech.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -210,15 +210,15 @@
                 <li class="resource-link">
                   <a
                     target="_blank" 
-                    href="https://www.youtube.com/watch?v=UlG62IXqa5"
-                    >What does a Frontend Developer actually do? ~ Gyasi Linje </a
+                    href="https://www.youtube.com/watch?v=xuxTJUIi7nQ"
+                    >The Career Paths in Software Engineering ~ Tiff In Tech </a
                    >
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank" 
-                    href="https://www.youtube.com/watch?v=DYB-Ujsf2uY&t=1s"
-                    >How to become a Frontend Developer ~ Tiff In Tech </a
+                    href="https://www.youtube.com/watch?v=07IViT_Ezuc"
+                    >Career Paths for Software Engineers ~ Engineering With Ustav </a
                    >
                 </li>
               </ul>
