Adds AgnosticUI to list of CSS resources

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1483,7 +1483,7 @@
           </p>
           <p>
             Note: You do not need to learn all of them, you just have to know
-            atleast one CSS-only and one CSS-Js framework/library.
+            at least one CSS-only and one CSS-Js framework/library.
           </p>
           <p>
             Before picking your first framework/library, check these videos out;
@@ -1570,7 +1570,31 @@
               </li>
             </ul>
           </div>
+          <!--* AgnosticUI -->
+          <div id="bulma" class="resource-card">
+            <h3 class="resource-card-title">
+              AgnosticUI<span class="resource-link-badge">Css and Js</span>
+            </h3>
 
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.agnosticui.com/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://github.com/AgnosticUI/AstroAgnosticUIStarter">Astro + AgnosticUI Starter</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://astro.build/themes/index.html">Astro Themes (allows you to preview)</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://developtodesign.com/agnosticui-examples">AgnosticUI Svelte Examples</a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+            </ul>
+          </div>
           <!--* Bulma -->
           <div id="bulma" class="resource-card">
             <h3 class="resource-card-title">
