--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1570,31 +1570,6 @@
               </li>
             </ul>
           </div>
-          <!--* AgnosticUI -->
-          <div id="bulma" class="resource-card">
-            <h3 class="resource-card-title">
-              AgnosticUI<span class="resource-link-badge">Css and Js</span>
-            </h3>
-
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://www.agnosticui.com/">Website</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://github.com/AgnosticUI/AstroAgnosticUIStarter">Astro + AgnosticUI Starter</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://astro.build/themes/index.html">Astro Themes (allows you to preview)</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://developtodesign.com/agnosticui-examples">AgnosticUI Svelte Examples</a>
-                <span class="resource-link-badge">Playlist</span>
-              </li>
-            </ul>
-          </div>
           <!--* Bulma -->
           <div id="bulma" class="resource-card">
             <h3 class="resource-card-title">
@@ -2029,6 +2004,41 @@
                 <a target="_blank" href="https://youtu.be/s7bKr_-GLtM">Create admin dashboard using Angular. ~
                   Simplilearn</a>
                 <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
+          </div>
+          
+          <!--* AgnosticUI -->
+          <div id="agnosticui" class="resource-card">
+            <h3 class="resource-card-title">
+              AgnosticUI<span class="resource-link-badge"> is a UI component library that works in React, Vue 3, Svelte, and Angular.
+            </h3>
+            <p>Brand your UI components once with CSS Custom properties then use across several UI frameworks like React, Vue 3, or Svelte!</p>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.agnosticui.com/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=sCLc2ttYJ2A">Intro to AgnosticUI</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://css-tricks.com/make-a-component-multiple-frameworks-in-a-monorepo/">How to Make a Component That Supports Multiple Frameworks</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://github.com/AgnosticUI/AstroAgnosticUIStarter">Astro + AgnosticUI Starter</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://astro.build/themes/index.html">Astro Themes (allows you to preview)</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://developtodesign.com/agnosticui-examples">AgnosticUI Svelte Examples</a>
+                <span class="resource-link-badge">Link</span>
               </li>
             </ul>
           </div>
