Removes a badge and uses Article for badge name

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2010,11 +2010,8 @@
           
           <!--* AgnosticUI -->
           <div id="agnosticui" class="resource-card">
-            <h3 class="resource-card-title">
-              AgnosticUI<span class="resource-link-badge"> is a UI component library that works in React, Vue 3, Svelte, and Angular.
-            </h3>
+            <h3 class="resource-card-title">AgnosticUI</h3>
             <p>Brand your UI components once with CSS Custom properties then use across several UI frameworks like React, Vue 3, or Svelte!</p>
-
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href="https://www.agnosticui.com/">Website</a>
@@ -2026,7 +2023,7 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://css-tricks.com/make-a-component-multiple-frameworks-in-a-monorepo/">How to Make a Component That Supports Multiple Frameworks</a>
-                <span class="resource-link-badge">Link</span>
+                <span class="resource-link-badge">Article</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://github.com/AgnosticUI/AstroAgnosticUIStarter">Astro + AgnosticUI Starter</a>
