Added agnosticui to the side menu.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -282,6 +282,9 @@
               <li class="sidebar-subtitle">
                 <a href="#angular">Angular</a>
               </li>
+              <li class="sidebar-subtitle">
+                <a href="#agnosticui">AgnosticUI</a>
+              </li>
             </ul>
           </li>
 
