Add two videos about no-code careers

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -221,6 +221,20 @@
                     >Career Paths for Software Engineers ~ Engineering With Ustav </a
                    >
                 </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://youtu.be/0_fuiK3b9OA"
+                    >In Demand Tech Jobs for 2021 Explained (no coding) ~ Bukola </a
+                   >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://youtu.be/c8oLHzW2qFU"
+                    >7 Non-Coding Tech Jobs that pay $100k + in 2022 ~ Mo Salhan </a
+                   >
+                </li>
               </ul>
             </div>
           </div>
