added the link for bitbucket resource by atlassian
this is my second contribution to any project, so please give me your feedback on how I can bring perfection and get to work on the project.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -193,7 +193,7 @@
                 <a href="#gitlab">GitLab</a>
               </li>
               <li class="sidebar-subtitle">
-                <a href="#bitbucket">BitBucket</a>
+                <a href="https://youtu.be/M44nEyd_5To">BitBucket Tutorial ~Atlassian</a>
               </li>
             </ul>
           </li>
