added video resources for task #3
the two videos I added are
1. https://youtu.be/AJsdLnsEFPQ
2. https://youtu.be/29ZJ4lN0PJY

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -235,6 +235,20 @@
                     >7 Non-Coding Tech Jobs that pay $100k + in 2022 ~ Mo Salhan </a
                    >
                 </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://youtu.be/AJsdLnsEFPQ"
+                    >IT Career Paths ~NexGenT</a
+                   >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://youtu.be/29ZJ4lN0PJY"
+                    >IT or Developer - Which is the Right Career Choice for You? ~I.T Career Questions</a
+                   >
+                </li>
               </ul>
             </div>
           </div>
