--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -238,15 +238,29 @@
                 <li class="resource-link">
                   <a
                     target="_blank" 
+                    href="https://youtu.be/PFucqbGqjrI"
+                    >How to Choose the Right Career in Tech. ~ Hossana Hali</a
+                   >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://youtu.be/wbQQ-XGx7s0"
+                    >How to Find the Right Role for You. ~ Stereotype Breakers</a
+                   >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
                     href="https://youtu.be/AJsdLnsEFPQ"
-                    >IT Career Paths ~NexGenT</a
+                    >IT Career Paths ~ NexGenT</a
                    >
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank" 
                     href="https://youtu.be/29ZJ4lN0PJY"
-                    >IT or Developer - Which is the Right Career Choice for You? ~I.T Career Questions</a
+                    >IT or Developer - Which is the Right Career Choice for You? ~ I.T Career Questions</a
                    >
                 </li>
               </ul>
