updated articles in career page
I've added two articles to the career page
1. https://www.business.com/articles/best-careers-tech-geeks/
2. https://www.freecodecamp.org/news/how-to-choose-the-best-tech-career-path-for-you-61c4d5ff9a77/

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -200,6 +200,20 @@
                     >41 Job Titles in Tech. Which One Will be Yours? ~ SkillCrush</a
                   >
                 </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.business.com/articles/best-careers-tech-geeks/"
+                    >20 Top Career Paths for Tech Geeks ~ business.com</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://www.freecodecamp.org/news/how-to-choose-the-best-tech-career-path-for-you-61c4d5ff9a77/"
+                    >How to choose the best tech career path for you ~freecodecamp</a
+                  >
+                </li>
               </ul>
             </div>
 
