cleaned the code and brought api section before the database section.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -220,6 +220,11 @@
           <li class="sidebar-title">
             <a href="#json">Json</a>
           </li>
+          
+          <!-- apis -->
+          <li class="sidebar-title">
+            <a href="#apis">APIs</a>
+          </li>
 
           <!-- databases -->
           <li class="sidebar-title">
@@ -233,10 +238,6 @@
               </li>
             </ul>
           </li>
-          <!-- apis -->
-          <li class="sidebar-title">
-            <a href="#apis">APIs</a>
-          </li>
 
           <!-- js frameworks and libraries -->
           <li class="sidebar-title">
@@ -247,34 +248,6 @@
               </li>
             </ul>
           </li>
-
-          <!-- design resources -->
-          <!-- <li class="sidebar-title">
-            <a href="#design">Design Resources</a>
-            <ul class="sidebar-sublinks">
-              <li class="sidebar-subtitle">
-                <a href="#fonts">Fonts</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#icons">Icons</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#photos">Photos</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#illustrations">Illustrations and Patterns</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#simplify-css">Simplify CSS</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#gradients">Gradients and Colors</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#others">Others</a>
-              </li>
-            </ul>
-          </li> -->
 
           <!-- Community -->
           <li class="sidebar-title">
@@ -858,31 +831,6 @@
         </div>
 
         <div class="resource-section__links">
-          <!--* Netlify -->
-          <!-- <div id="netlify" class="resource-card">
-            <h3 class="resource-card-title">Netlify</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://netlify.com">Website</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://docs.netlify.com/">Documentation.</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/cUMUTS2ybhg">Host websites on Netlify for free. ~
-                  Packetcode</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/bjVUqvcCnxM">Deploy websites in seconds with Netlify ~
-                  Traversy Media</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-            </ul>
-          </div> -->
-
           <!--*  Heroku -->
           <div id="heroku" class="resource-card">
             <h3 class="resource-card-title">Heroku</h3>
@@ -916,17 +864,13 @@
             <h3 class="resource-card-title">Amazon Web Services (AWS)</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href=https://aws.amazon.com />Home Page</a>
+                <a target="_blank" href=https://aws.amazon.com />Website</a>
+                <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href=https://aws.amazon.com/getting-started />Getting Started with AWS</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <span class="resource-link-badge">Link</span>
               </li>
-              <!-- <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/8hrJ4oN1u_8">How to host a website on GitHub . ~
-                  Programmingknowledge</a>
-                <span class="resource-link-badge">Video</span>
-              </li> -->
             </ul>
           </div>
           <!--* Google Cloud Platform -->
@@ -935,15 +879,15 @@
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href=https://cloud.google.com />Home Page</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href=https://cloud.google.com/why-google-cloud>Why Google Cloud</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href=https://cloud.google.com/solutions>Google Cloud solutions</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <span class="resource-link-badge">Link</span>
               </li>
             </ul>
           </div>
@@ -1020,13 +964,6 @@
           <div class="resource-card">
             <h3 class="resource-card-title">Courses</h3>
             <ul class="resource-card-links">
-              <!-- <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">JavaScript
-                  Algorithms and Data Structures. ~
-                  FreeCodeCamp</a>
-                  <span class="resource-link-badge">Free</span>
-              </li> -->
               <li class="resource-link">
                 <a target="_blank" href="https://www.w3schools.com/python/">Python Tutorial ~ W3Schools</a>
                 <span class="resource-link-badge">Free</span>
@@ -1112,10 +1049,6 @@
                 <a target="_blank" href="https://www.youtube.com/watch?v=ENrzD9HAZK4">Node.js Ultimate Beginner's Guide
                   in 7 Easy Steps ~ Fireship</a>
               </li>
-              <!-- <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/UKgZguxcPE8">JavaScript DOM crash course. ~ Code and
-                  Create</a>
-              </li> -->
               <li class="resource-link">
                 <a target="_blank" href="https://www.youtube.com/watch?v=Oe421EPjeBE">Node.js and Express.js - Full
                   Course
@@ -1190,11 +1123,6 @@
                   Ideas (With Source Code)</a>
                 <span class="resource-link-badge">Article</span>
               </li>
-              <!-- <li class="resource-link">
-                  <a target="_blank" href="https://www.freecodecamp.org/news/javascript-projects-for-beginners">40
-                    JavaScript projects for beginners – Easy ideas to get
-                    started coding JS. ~ FreeCodeCamp</a>
-                  </li> -->
             </ul>
           </div>
 
@@ -1264,60 +1192,6 @@
               <li class="resource-link">
                 <a target="_blank" href=""></a>
                 <span class="resource-link-badge"></span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!--* Databases -->
-      <section id="databases" class="resource-section">
-        <h2 class="resource--section__heading">Databases</h2>
-
-        <div class="resource-section__body">
-          <p>A database is an organized collection of structured information, or data, typically stored electronically
-            in a computer system. There are different types of databases and they can all be integrated into a Node.js
-            application.</p>
-
-          <div class="resource-card" id="mysql">
-            <h3 class="resource-card-title">MySQL</h3>
-            <p class="resource-card-body">MySQL is one of the more popular database platforms that features a Relational
-              Database Management System and used specially constructed instructions called queries to perform actions
-              on data.</p>
-
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a href="https://www.mysql.com" target="_blank" rel="noopener noreferrer">Website</a>
-                <!-- <span class="resource-link-badge">Video</span> -->
-              </li>
-              <li class="resource-link">
-                <a href="https://www.youtube.com/watch?v=7S_tz1z_5bA" target="_blank" rel="noopener noreferrer">MySQL
-                  Tutorial for Beginners ~ Programming with Mosh</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a href="https://www.youtube.com/watch?v=EN6Dx22cPRI" target="_blank" rel="noopener noreferrer">Using
-                  MySQL with Node.js ~ Traversy Media</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-            </ul>
-          </div>
-
-          <div class="resource-card" id="mongodb">
-            <h3 class="resource-card-title">MongoDB</h3>
-            <p class="resource-card-body">MongoDB is a popular NoSQL database platform. This means that instead of
-              queries, it uses a Document Data Model, much like JSON, that allows for faster, more flexible application
-              development.</p>
-
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a href="https://www.mongodb.com" target="_blank" rel="noopener noreferrer">Website</a>
-                <!-- <span class="resource-link-badge">Video</span> -->
-              </li>
-              <li class="resource-link">
-                <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_blank" rel="noopener noreferrer">MongoDB
-                  in 30 Minutes ~ Traversy Media</a>
-                <span class="resource-link-badge">Video</span>
               </li>
             </ul>
           </div>
@@ -1421,6 +1295,60 @@
                   create better APIs—faster.</a>
                 <span class="resource-link-badge">Tool</span>
               </li>
+          </div>
+        </div>
+      </section>
+        
+      <!--* Databases -->
+      <section id="databases" class="resource-section">
+        <h2 class="resource--section__heading">Databases</h2>
+
+        <div class="resource-section__body">
+          <p>A database is an organized collection of structured information, or data, typically stored electronically
+            in a computer system. There are different types of databases and they can all be integrated into a Node.js
+            application.</p>
+
+          <div class="resource-card" id="mysql">
+            <h3 class="resource-card-title">MySQL</h3>
+            <p class="resource-card-body">MySQL is one of the more popular database platforms that features a Relational
+              Database Management System and used specially constructed instructions called queries to perform actions
+              on data.</p>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a href="https://www.mysql.com" target="_blank" rel="noopener noreferrer">Website</a>
+                <!-- <span class="resource-link-badge">Video</span> -->
+              </li>
+              <li class="resource-link">
+                <a href="https://www.youtube.com/watch?v=7S_tz1z_5bA" target="_blank" rel="noopener noreferrer">MySQL
+                  Tutorial for Beginners ~ Programming with Mosh</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a href="https://www.youtube.com/watch?v=EN6Dx22cPRI" target="_blank" rel="noopener noreferrer">Using
+                  MySQL with Node.js ~ Traversy Media</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="resource-card" id="mongodb">
+            <h3 class="resource-card-title">MongoDB</h3>
+            <p class="resource-card-body">MongoDB is a popular NoSQL database platform. This means that instead of
+              queries, it uses a Document Data Model, much like JSON, that allows for faster, more flexible application
+              development.</p>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a href="https://www.mongodb.com" target="_blank" rel="noopener noreferrer">Website</a>
+                <!-- <span class="resource-link-badge">Video</span> -->
+              </li>
+              <li class="resource-link">
+                <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_blank" rel="noopener noreferrer">MongoDB
+                  in 30 Minutes ~ Traversy Media</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
