--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -214,6 +214,11 @@
             </ul>
           </li>
 
+          <!-- debugging -->
+          <li class="sidebar-title">
+            <a href="#debugging">Debugging</a>
+          </li>
+
           <!-- javascript -->
           <li class="sidebar-title">
             <a href="#javascript">Javascript</a>
@@ -232,7 +237,14 @@
                 <a href="#bootstrap">Bootstrap</a>
               </li>
               <li class="sidebar-subtitle">
+                <a href="#styled">Styled Components</a>
+              </li>
+              <li class="sidebar-subtitle">
                 <a href="#tailwind">Tailwind</a>
+              </li>
+              </li>
+              <li class="sidebar-subtitle">
+                <a href="#chakra">Chakra UI</a>
               </li>
               <li class="sidebar-subtitle">
                 <a href="#bulma">Bulma</a>
@@ -249,9 +261,6 @@
               </li>
               <li class="sidebar-subtitle">
                 <a href="#sass">Sass</a>
-              </li>
-              <li class="sidebar-subtitle">
-                <a href="#stylus">Stylus</a>
               </li>
               <li class="sidebar-subtitle">
                 <a href="#postcss">PostCSS</a>
@@ -281,6 +290,9 @@
               </li>
               <li class="sidebar-subtitle">
                 <a href="#angular">Angular</a>
+              </li>
+              <li class="sidebar-subtitle">
+                <a href="#svelte">Svelte</a>
               </li>
               <li class="sidebar-subtitle">
                 <a href="#agnosticui">AgnosticUI</a>
@@ -416,7 +428,10 @@
             <h3 class="resource-card-title">Videos</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="#"></a>
+                <a target="_blank" href="https://youtu.be/GJ8jidDdWVg">What is front-end? ~ Codecademy</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/qyHyFsT7Hig">Frontend Development explained in 2 mins. ~ Mayuko</a>
               </li>
             </ul>
           </div>
@@ -447,6 +462,10 @@
                 <a target="_blank" href="https://vitto.cc/the-complete-front-end-developer-roadmap-2021/">The complete
                   frontend developer roadmap 2021 ~ Vittorio
                   Rivabella</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.freecodecamp.org/news/how-to-learn-web-dev-in-2021-roadmap/
+">How to Learn Web Development in 2021 - a Web Developer Roadmap ~ FreeCodeCamp</a>
               </li>
             </ul>
           </div>
@@ -505,7 +524,7 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://enyata.com/academy">Enyata</a>
-                <span class="resource-link-badge"></span>
+                <span class="resource-link-badge">Free</span>
               </li>
             </ul>
           </div>
@@ -700,6 +719,15 @@
                   <li class="resource-link">
                     <a target="_blank" href="https://code.visualstudio.com/docs/editor/vscode-web">Documentation</a>
                     <span class="resource-link-badge">Link</span>
+                  </li>
+                  <li class="resource-link">
+                    <a target="_blank" href="https://youtu.be/hdNipVZK53A">VsCode for the web. ~ VsCode</a>
+                    <span class="resource-link-badge">Video</span>
+                  </li>
+                  <li class="resource-link">
+                    <a target="_blank" href="https://youtu.be/FpadVjNj37k
+">Vscode running in the browser ~ Coder Foundry</a>
+                    <span class="resource-link-badge">Video</span>
                   </li>
                 </ul>
               </li>
@@ -935,17 +963,6 @@
             </ul>
           </div>
 
-          <!-- courses -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Courses</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="#"></a>
-                <span class="resource-link-badge"></span>
-              </li>
-            </ul>
-          </div>
-
           <!-- articles -->
           <div class="resource-card">
             <h3 class="resource-card-title">Articles</h3>
@@ -979,6 +996,10 @@
               Tips and tricks, tools, cool examples etc.
             </p>
             <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.websiteplanet.com/webtools/responsive-checker/">Responsive Checker - Make sure your website looks perfect no matter what device your visitors are using to view it!</a>
+                <span class="resource-link-badge">Tool</span>
+              </li>
               <li class="resource-link">
                 <a target="_blank" href="https://responsively.app/">Responsively App - A dev-tool that aids faster and
                   precise responsive web development.</a>
@@ -1070,35 +1091,6 @@
                 <a target="_blank" href="https://youtu.be/GqNAD4XoZ6k">Using Git Desktop for beginners. ~ Kevin
                   Powell</a>
                 <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/WgZIv5HI44o">GitHub: adding an SSH key. ~ SyntaxByte</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/1vVIpIvboSg">Creating and managing a GPG key pair. ~ Nick
-                  Janetakis</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/4166ExAnxmo">Signing and verifying Git commits on the command
-                  line and
-                  GitHub. ~ Nick Janetakis</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account">Adding
-                  a new SSH key to your GitHub account ~ GitHub
-                  documentation</a>
-                <span class="resource-link-badge">Article</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://docs.github.com/en/authentication/managing-commit-signature-verification/adding-a-new-gpg-key-to-your-github-account">Adding
-                  a new GPG key to your GitHub account ~ GitHub
-                  documentation</a>
-                <span class="resource-link-badge">Article</span>
               </li>
             </ul>
           </div>
@@ -1226,6 +1218,56 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/8hrJ4oN1u_8">How to host a website on GitHub . ~
                   Programmingknowledge</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!--* Debugging -->
+      <section id="debugging" class="resource-section">
+        <h2 class="resource-section__heading">Debugging Your Code</h2>
+
+        <div class="resource-section__body">
+          <p>
+            Debugging is a very important part of the development process. It is a process of finding and fixing errors (also known as "bugs") in your code. These bugs can cause your code to behave unexpectedly or crash.
+            </p>
+            <p>
+            As a developer, you need to be able to find and fix errors in your code. The following resources will help you to learn how to debug your code.
+          </p>
+        </div>
+
+        <div class="resource-section__links">
+          <div id="debugging" class="resource-card">
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/x4q86IjJFag">
+                  Chrome developer tools crash course ~ Brad Travesty
+                </a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/gTVpBbFWry8">
+                  Chrome devTools crash course ~ FreeCodeCamp
+                </a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/Y3u2groOG-A">
+                  Chrome devTools complete course ~ Codedamn</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PLgjjGlfBflIRRWuCXnSTU1-35EcDc5Jwf
+">
+                  Firefox devTools ~ Mozilla developer
+                </a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/a-V8GFtwjos">
+                  Firefox devTools ~ Kevin Powell</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
@@ -1539,6 +1581,32 @@
               </li>
             </ul>
           </div>
+   
+          <!--* styled components -->
+          <div id="styled" class="resource-card">
+            <h3 class="resource-card-title">
+              Styled Components<span class="resource-link-badge">Css only</span>
+            </h3>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.styled-components.com/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://styled-components.com/docs">Documentation</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=02zO0hZmwnw">Styled Components crash course. ~ Travesty Media</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PLC3y8-rFHvwgu-G08-7ovbN9EyhF_cltM">React Styled Components. ~ Codevolution</a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+            </ul>
+          </div>
 
           <!--* tailwind -->
           <div id="tailwind" class="resource-card">
@@ -1577,6 +1645,33 @@
               </li>
             </ul>
           </div>
+
+          <!--* chakra ui -->
+          <div id="chakra" class="resource-card">
+            <h3 class="resource-card-title">
+              Chakra UI<span class="resource-link-badge">Css only</span>
+            </h3>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://chakra-ui.com">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://chakra-ui.com/guides/first-steps">Documentation</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PLdUwL9O_dBokaW-aavCp3ppd6ynTs-gd2">Chakra UI ~ Jesus take the Compiler</a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=dj6rPuWXoQM">Build a React Responsive Portfolio App Using Chakra UI ~ Codepur</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
+          </div>
+
           <!--* Bulma -->
           <div id="bulma" class="resource-card">
             <h3 class="resource-card-title">
@@ -1614,6 +1709,7 @@
               </li>
             </ul>
           </div>
+
         </div>
       </section>
 
@@ -1673,21 +1769,6 @@
                 <a target="_blank" href="https://youtu.be/YD91G8DdUsw">Less CSS Preprocessor for beginners. ~ Travesty
                   Media</a>
                 <span class="resource-link-badge">Video</span>
-              </li>
-            </ul>
-          </div>
-
-          <!--* stylus -->
-          <div id="stylus" class="resource-card">
-            <h3 class="resource-card-title">Stylus</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://stylus-lang.com/">Website.</a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="#"></a>
-                <span class="resource-link-badge"></span>
               </li>
             </ul>
           </div>
@@ -1825,7 +1906,7 @@
             <h3 class="resource-card-title">Articles</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="#"></a>
+                <a target="_blank" href="https://therevealer.hashnode.dev/what-is-an-api">What Is An API? ~ Emmanuel Aguchukwu</a>
               </li>
             </ul>
           </div>
@@ -1876,6 +1957,10 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Make your own mock API. ~ Code with Abba
                   Kubow</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://blog.bitsrc.io/6-apis-frontend-developers-should-know-3a94815c53dd"></a>6 APIs Frontend Developers Should Know</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
@@ -1971,6 +2056,10 @@
                 <span class="resource-link-badge">Playlist</span>
               </li>
               <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/uqpM7WVTKI4">Vue Authentication full course ~ Scalable Scripts.</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
                 <a target="_blank" href="https://youtube.com/playlist?list=PL8p2I9GklV44m5tFH-zjCmTiHeq9GZrby">Build a
                   restaurant management project with VueJs. ~ Code step by step</a>
                 <span class="resource-link-badge">Playlist</span>
@@ -2010,6 +2099,39 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/s7bKr_-GLtM">Create admin dashboard using Angular. ~
                   Simplilearn</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+            </ul>
+          </div>
+
+          <!--* svelte -->
+          <div id="svelte" class="resource-card">
+            <h3 class="resource-card-title">Svelte</h3>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://svelte.dev/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://svelte.dev/docs">Documentation</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=3TVy6GdtNuQ">Svelte crash course. ~ Travesty Media</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=ujbE0mzX-CU">Learn the Svelte Javascript framework full course. ~
+                  FreeCodeCamp</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PL4cUxeGkcC9hlbrVO_2QFVqVPhlZmz7tO">Svelte tutorial for beginners. ~ The Net Ninja</a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=ydR_M0fw9Xc">SvelteKit for beginners. Movie app tutorial ~ Dev Ed</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
@@ -2075,6 +2197,10 @@
                   </li>
                 </ul>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.fontshare.com/">Font share - Fontshare is a free fonts service from ITF, making quality fonts accessible to all.</a>
+                <span class="resource-link-badge">Free</span>
+              </li>
             </ul>
           </div>
 
@@ -2113,6 +2239,10 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://getloaf.io/pricing/">Loaf - Animated SVG icons.</a>
+                <span class="resource-link-badge">Free</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://seeklogo.com">Seeklogo - Seeklogo is the world's best brand logo and vector logo template source.</a>
                 <span class="resource-link-badge">Free</span>
               </li>
             </ul>
@@ -2258,15 +2388,15 @@
 
         <div class="resource-section__body">
           <p>
-            Cheatsheets are short lists of information that you can use
-            to help you do or remember something. Below are cheatsheets on
+            Cheatsheets are short lists of information that you can use
+            to help you do or remember something. Below are cheatsheets on
             what you have been learning so far. Do enjoy!
           </p>
         </div>
 
         <ul class="resource-card-links">
           <li class="resource-link">
-            <a href="#"></a>
+            <a href="https://www.freecodecamp.org/news/the-react-cheatsheet/">The React Cheatsheet for 2022 ~ Reed Barger.</a>
           </li>
         </ul>
       </section>
