added 2 links and arranged the links in careers page.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -8,7 +8,11 @@
 
     <!--* Title -->
     <title>The different careers in tech. | Tech Roadmap.</title>
-    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -33,7 +37,10 @@
       property="og:description"
       content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
-    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="og:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:url" content="https://careerroadmap.tech" />
@@ -45,7 +52,10 @@
       property="twitter:description"
       content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
-    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="twitter:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
@@ -65,22 +75,13 @@
     <!--* CSS (resets) -->
     <!-- Normalize.css -->
     <!-- This comes first -->
-    <link
-      rel="stylesheet"
-      href="../css/css-resets/normalize.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/normalize.css" />
     <!-- My CSS reset -->
     <!-- This comes second -->
-    <link
-      rel="stylesheet"
-      href="../css/css-resets/my-css-reset.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/my-css-reset.css" />
     <!-- My Font reset -->
     <!-- This comes third -->
-    <link
-      rel="stylesheet"
-      href="../css/css-resets/my-font-reset.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/my-font-reset.css" />
 
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
@@ -115,7 +116,9 @@
                 <a class="nav-link" href="../html/careers.html">Careers</a>
               </li>
               <li>
-                <a class="nav-link" href="../html/contribute.html">Contribute</a>
+                <a class="nav-link" href="../html/contribute.html"
+                  >Contribute</a
+                >
               </li>
             </ul>
           </div>
@@ -190,14 +193,16 @@
                   <a
                     target="_blank"
                     href="https://blog.timonwa.com/you-dont-need-to-write-code-to-become-a-tech-sisbro"
-                    >21 no-code tech jobs you can do to become a tech sis or tech bro.  ~ Timonwa</a
+                    >21 no-code tech jobs you can do to become a tech sis or
+                    tech bro. ~ Timonwa</a
                   >
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
                     href="https://skillcrush.com/blog/41-tech-job-titles/"
-                    >41 Job Titles in Tech. Which One Will be Yours? ~ SkillCrush</a
+                    >41 Job Titles in Tech. Which One Will be Yours? ~
+                    SkillCrush</a
                   >
                 </li>
                 <li class="resource-link">
@@ -211,7 +216,23 @@
                   <a
                     target="_blank"
                     href="https://www.freecodecamp.org/news/how-to-choose-the-best-tech-career-path-for-you-61c4d5ff9a77/"
-                    >How to choose the best tech career path for you ~freecodecamp</a
+                    >How to choose the best tech career path for you
+                    ~freecodecamp</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://edidiongasikpo.com/how-to-kickstart-a-career-in-tech"
+                    >How to Kickstart a Career in Tech ~ Edidiong Asikpo</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://therevealer.hashnode.dev/starting-out-in-tech-in-2022
+"
+                    >Starting Out In Tech In 2022. ~ Emmanuel Aguchukwu</a
                   >
                 </li>
               </ul>
@@ -222,60 +243,51 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a
-                    target="_blank" 
-                    href="https://youtu.be/PFucqbGqjrI"
+                  <a target="_blank" href="https://youtu.be/PFucqbGqjrI"
                     >How to Choose the Right Career in Tech. ~ Hossana Hali</a
-                   >
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/wbQQ-XGx7s0"
+                    >How to Find the Right Role for You. ~ Stereotype
+                    Breakers</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/0_fuiK3b9OA"
+                    >In Demand Tech Jobs for 2021 Explained (No Coding) ~ Bukola
+                  </a>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/c8oLHzW2qFU"
+                    >7 Non-Coding Tech Jobs that pay $100k + in 2022 ~ Mo Salhan
+                  </a>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/29ZJ4lN0PJY"
+                    >IT or Developer - Which is the Right Career Choice for You?
+                    ~ I.T Career Questions</a
+                  >
                 </li>
                 <li class="resource-link">
                   <a
-                    target="_blank" 
-                    href="https://youtu.be/wbQQ-XGx7s0"
-                    >How to Find the Right Role for You. ~ Stereotype Breakers</a
-                   >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank" 
-                    href="https://youtu.be/29ZJ4lN0PJY"
-                    >IT or Developer - Which is the Right Career Choice for You? ~ I.T Career Questions</a
-                   >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank" 
+                    target="_blank"
                     href="https://www.youtube.com/watch?v=xuxTJUIi7nQ"
-                    >The Career Paths in Software Engineering ~ Tiff In Tech </a
-                   >
+                    >The Career Paths in Software Engineering ~ Tiff In Tech
+                  </a>
                 </li>
                 <li class="resource-link">
                   <a
-                    target="_blank" 
+                    target="_blank"
                     href="https://www.youtube.com/watch?v=07IViT_Ezuc"
-                    >Career Paths for Software Engineers ~ Engineering With Ustav </a
-                   >
+                    >Career Paths for Software Engineers ~ Engineering With
+                    Ustav
+                  </a>
                 </li>
                 <li class="resource-link">
-                  <a
-                    target="_blank" 
-                    href="https://youtu.be/0_fuiK3b9OA"
-                    >In Demand Tech Jobs for 2021 Explained (no coding) ~ Bukola </a
-                   >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank" 
-                    href="https://youtu.be/c8oLHzW2qFU"
-                    >7 Non-Coding Tech Jobs that pay $100k + in 2022 ~ Mo Salhan </a
-                   >
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank" 
-                    href="https://youtu.be/AJsdLnsEFPQ"
+                  <a target="_blank" href="https://youtu.be/AJsdLnsEFPQ"
                     >IT Career Paths ~ NexGenT</a
-                   >
+                  >
                 </li>
               </ul>
             </div>
@@ -286,8 +298,7 @@
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
 
-          <div class="careers__cards">
-          </div>
+          <div class="careers__cards"></div>
         </section>
       </main>
 
@@ -308,9 +319,7 @@
             </p>
             <p>
               If you would like to contribute to this project, please visit our
-              <a
-                class="paragraph-links"
-                href="../html/contribute.html"
+              <a class="paragraph-links" href="../html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -331,7 +340,9 @@
           <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
-              <li><a class="footer-link para-link" href="../index.html">Home</a></li>
+              <li>
+                <a class="footer-link para-link" href="../index.html">Home</a>
+              </li>
               <li>
                 <a class="footer-link para-link" href="../html/careers.html"
                   >Careers</a
@@ -348,8 +359,17 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links footer" target="_blank" href="../index.html">Tech Roadmap</a> is created by
-              <a class="paragraph-links footer" target="_blank" href="https://twitter.com/timonwa_"
+              <a
+                class="paragraph-links footer"
+                target="_blank"
+                href="../index.html"
+                >Tech Roadmap</a
+              >
+              is created by
+              <a
+                class="paragraph-links footer"
+                target="_blank"
+                href="https://twitter.com/timonwa_"
                 >Timonwa</a
               >
             </p>
@@ -373,10 +393,7 @@
                   target="_blank"
                   href="https://twitter.com/techroadmap_"
                 >
-                  <img
-                    src="../assets/icons/twitter.png"
-                    alt="twitter icon"
-                  />
+                  <img src="../assets/icons/twitter.png" alt="twitter icon" />
                 </a>
               </li>
             </ul>
@@ -402,7 +419,7 @@
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
     <script src="../js/script.js"></script>
-    
+
     <!-- Modules -->
     <script type="module" src="../js/careerPage.js"></script>
   </body>
