added more resource links to the frontend page.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1466,17 +1466,6 @@
             </ul>
           </div>
 
-          <!-- courses -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Courses</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="#"></a>
-                <span class="resource-link-badge"></span>
-              </li>
-            </ul>
-          </div>
-
           <!-- articles -->
           <div class="resource-card">
             <h3 class="resource-card-title">Articles</h3>
@@ -1829,9 +1818,7 @@
             <h3 class="resource-card-title">Articles</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://blog.siddu.tech/secret-json-features">5 Secret features of JSON you
-                  didn't know about. ~
-                  Siddharth Shyniben</a>
+                <a target="_blank" href=""></a>
               </li>
             </ul>
           </div>
@@ -1844,8 +1831,9 @@
             </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href=""></a>
-                <span class="resource-link-badge"></span>
+                <a target="_blank" href="https://blog.siddu.tech/secret-json-features">5 Secret features of JSON you
+                  didn't know about. ~
+                  Siddharth Shyniben</a>
               </li>
             </ul>
           </div>
@@ -1861,7 +1849,7 @@
             An API is an intermediary between two applications software
             allowing them easily communicate and share data. It stands for
             Application Programming Interface. This is easy to understand by
-            both computers and humans as it’s outputted in key/value pairs.
+            both computers and humans as it's outputted in key/value pairs.
             Find out more below.
           </p>
         </div>
@@ -2016,10 +2004,6 @@
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/a_7Z7C_JCyo">15 ReactJs projects . ~ FreeCodeCamp</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/LlvBzyy-558">React hooks course. All React hooks explained. ~
                   PedroTech</a>
                 <span class="resource-link-badge">Video</span>
@@ -2028,6 +2012,10 @@
                 <a target="_blank" href="https://youtube.com/playlist?list=PLC3y8-rFHvwisvxhZ135pogtX7_Oe3Q3A">React
                   hooks tutorial. ~ Codevolution</a>
                 <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/a_7Z7C_JCyo">15 ReactJs projects . ~ FreeCodeCamp</a>
+                <span class="resource-link-badge">Video</span>
               </li>
             </ul>
           </div>
@@ -2054,6 +2042,14 @@
                 <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9hYYGbV60Vq3IXYNfDk8At1">VueJs 3
                   tutorial. ~ The Net Ninja</a>
                 <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=BGAu__J4xoc&list=PL4cUxeGkcC9i371QO_Rtkl26MwtiJ30P2">Learn Vuex ~ The Net Ninja</a>
+                <span class="resource-link-badge">Playlist</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=w1riyS3i7ik">Vuex tutorial Full course ~ Scrimba</a>
+                <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/uqpM7WVTKI4">Vue Authentication full course ~ Scalable Scripts.</a>
